# pyomo

./: pyproject.toml  setup.py
.github/workflows/: push_branch_test.yml  test_branches.yml
doc/OnlineDocs/explanation/modeling_utils/libaslfunctions/: index.rst
examples/pyomobook/: test_book_examples.py
pyomo/common/: indexing.py
pyomo/common/collections/: __init__.py
pyomo/core/base/: expression.py  indexed_component.py  indexed_component_slice.py  initializer.py  misc.py  piecewise.py  reference.py  units_container.py  util.py
pyomo/core/expr/: current.py  template_expr.py  visitor.py
pyomo/core/tests/unit/: test_initializer.py  test_sets.py  test_units.py
pyomo/dae/: contset.py  misc.py  simulator.py
pyomo/dae/plugins/: colloc.py  finitedifference.py
pyomo/dae/tests/: test_integral.py  test_simulator.py
pyomo/dataportal/: parse_datacmds.py  process_data.py
